<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup1Activity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/gradient_background"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="2dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/pinkRose"
                android:textSize="35dp"
                android:textStyle="bold|italic" />


            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="@color/pinkRoseLight1"
                android:ems="8"
                android:hint="@string/enter_user"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/pinkRose1"
                android:textColorHint="@color/pinkRoseLight"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/checkUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="@color/pinkRoseLight1"
                android:ems="8"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/pinkRose1"
                android:textColorHint="@color/pinkRoseLight"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/checkPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />

            <EditText
                android:id="@+id/editTextRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="@color/pinkRoseLight1"
                android:ems="8"
                android:hint="@string/enter_repassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/pinkRose1"
                android:textColorHint="@color/pinkRoseLight"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/checkRepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="@color/pinkRoseLight1"
                android:ems="8"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/pinkRose1"
                android:textColorHint="@color/pinkRoseLight"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/checkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroupStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/student"
                        android:textColor="@color/pinkRose"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radioTeacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/teacher"
                        android:textColor="@color/pinkRose"
                        android:textSize="16dp" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_gradient_tool_nostroke"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/register_account"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>