<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewFlipper">
    </ViewFlipper>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/img_classroomapp_circle"
            android:src="@drawable/logo_tool"
        />

        <TextView
            android:id="@+id/logotext"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_gradient_tool"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_gradient_tool2"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>



</RelativeLayout>