<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semi"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edittextQuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_assign_layout"
                    android:backgroundTint="@color/grey6"
                    android:hint="@string/enter_quest"
                    android:padding="5dp"
                    android:textColor="@color/pinkRose1" />
            </LinearLayout>

            <TextView
                android:id="@+id/checkquestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:text=""/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioA"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:textSize="16dp" />


                    <RadioButton
                        android:id="@+id/radioB"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radioC"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radioD"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:checked="false"
                        android:duplicateParentState="false"
                        android:textSize="16dp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edittextA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_assign_layout"
                        android:backgroundTint="@color/grey6"
                        android:hint="@string/enter_ans"
                        android:imeOptions="actionNext"
                        android:padding="5dp"
                        android:textColor="@color/grey"
                        android:maxLines="1"
                        android:inputType="text"/>

                    <TextView
                        android:id="@+id/checktextA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text=""
                        />

                    <EditText
                        android:id="@+id/edittextB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_assign_layout"
                        android:backgroundTint="@color/grey6"
                        android:hint="@string/enter_ans"
                        android:imeOptions="actionNext"
                        android:padding="5dp"
                        android:textColor="@color/grey"
                        android:maxLines="1"
                        android:inputType="text"/>

                    <TextView
                        android:id="@+id/checktextB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text=""
                        />

                    <EditText
                        android:id="@+id/edittextC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_assign_layout"
                        android:backgroundTint="@color/grey6"
                        android:hint="@string/enter_ans"
                        android:imeOptions="actionNext"
                        android:padding="5dp"
                        android:textColor="@color/grey"
                        android:maxLines="1"
                        android:inputType="text"/>

                    <TextView
                        android:id="@+id/checktextC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text=""
                        />

                    <EditText
                        android:id="@+id/edittextD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_assign_layout"
                        android:backgroundTint="@color/grey6"
                        android:hint="@string/enter_ans"
                        android:imeOptions="actionDone"
                        android:padding="5dp"
                        android:textColor="@color/grey"
                        android:maxLines="1"
                        android:inputType="text"/>

                    <TextView
                        android:id="@+id/checktextD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text=""
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/select_type_left"
                    android:backgroundTint="@color/grey6"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/pinkRose"
                    app:srcCompat="@drawable/ic_refresh" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/select_type_right"
                    android:backgroundTint="@color/bluegreen"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minHeight="48dp"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/setQuestion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_gradient_tool"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:text=""
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>